<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bear_border">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:padding="15dp"
        android:paddingBottom="10dp"
        android:layout_width="300dp"
        android:src="@drawable/lg__3_"
        android:layout_height="400dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/google_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/google"
            android:contentDescription="@string/google_button" />

        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/fb"
            android:contentDescription="@string/facebook_button" />




    </LinearLayout>

    <EditText
        android:hint="@string/email"
        android:id="@+id/login_email"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"/>

    <EditText
        android:hint="@string/password"
        android:id="@+id/login_password"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/login_signin_button"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="60dp"/>

</LinearLayout>