<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:background="@drawable/circle"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/calendar_color_based_on_person" />

    <TextView
        android:text="@string/time_example"
        android:textSize="25sp"
        android:textAlignment="center"
        android:id="@+id/home_calendar_list_time"
        android:layout_width="100dp"
        android:layout_height="match_parent"/>

    <TextView
        android:text="@string/football_practice"
        android:textSize="25sp"
        android:textAlignment="center"
        android:id="@+id/home_calendar_list_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>