<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:backgroundTint="@color/transdarkblue"
            android:background="@drawable/rounded_layout"
            android:gravity="center_vertical" />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/chore_details"
            android:layout_marginTop="-35dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_layout"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:text="@string/chore_example"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/chore_detail_description"
             />

        <TextView
            android:text="@string/_75_points"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/chore_detail_point_value"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/room"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

            <ImageView
                android:id="@+id/chore_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/room_image" />

            <TextView
                android:id="@+id/chore_detail_room_name"
                android:text="@string/room_example"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/is_this_chore_complete"
            android:textStyle="bold"
            android:textSize="17sp"
            />

        <Button
            android:id="@+id/chore_detail_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textSize="17sp"
            />




    </LinearLayout>
</LinearLayout>