<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

            <Button
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:foreground="@drawable/hamburger_menu"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:id="@+id/action_bar_back"
                android:contentDescription="@string/menu" />


            <TextView
                android:textAlignment="center"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/honey_bear_helpers"
                android:fontFamily="sans-serif-smallcaps"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:padding="15dp"
                />

            <Button
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:foreground="@drawable/user_circle"
                android:id="@+id/action_bar_forward"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:contentDescription="@string/user_profile" />


</LinearLayout>