<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/layout_bg"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/create_profile_bear_transparent"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>


 <LinearLayout
     android:layout_marginTop="60dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">

    <Button
        android:id="@+id/adult_button"
        android:text="@string/adult"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="60dp"/>

     <TextView
         android:textAlignment="center"
         android:textSize="30sp"
         android:text="@string/or"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="60dp"/>

     <Button
         android:id="@+id/child_button"
         android:text="@string/child"
         android:layout_weight="2"
         android:layout_width="0dp"
         android:layout_height="60dp"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="Profile Icon Color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/med_brown">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="700dp"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <GridView
                    android:id="@+id/color_chooser_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:columnWidth="100dp"
                    android:gravity="center"
                    android:horizontalSpacing="1dp"
                    android:numColumns="7"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbars="horizontal"
                    android:stretchMode="none"
                    android:verticalSpacing="1dp">

                </GridView>
            </LinearLayout>
        </FrameLayout>
    </HorizontalScrollView>



    <Button
        android:text="@string/create_profile"
        android:id="@+id/create_profile_button"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="65dp"/>


</LinearLayout>