<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/layout_bg"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/log"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>


    <TextView
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/child_s_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/child_creation_name_edit_text"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:hint="@string/child_s_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <TextView
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/child_s_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/child_creation_age_edit_text"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:hint="@string/child_s_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="age"
        android:inputType="number" />

    <TextView
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/child_profile_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"

        android:backgroundTint="@color/med_brown">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="700dp"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <GridView
                    android:id="@+id/child_creation_color_chooser_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:columnWidth="100dp"
                    android:gravity="center"
                    android:horizontalSpacing="1dp"
                    android:numColumns="7"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbars="horizontal"
                    android:stretchMode="none"
                    android:verticalSpacing="1dp">

                </GridView>
            </LinearLayout>
        </FrameLayout>
    </HorizontalScrollView>



    <Button
        android:text="@string/create_child_profile"
        android:id="@+id/create_child_profile_button"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="65dp"/>


</LinearLayout>