<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_background"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <View

            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:backgroundTint="@color/limegreen"
            android:background="@drawable/rounded_layout"
            android:gravity="center_vertical" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:text="@string/kitchen"
            android:layout_marginTop="-33dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


    <GridView
        android:id="@+id/chore_grid_kitchen"
        android:background="@drawable/rounded_layout"
        android:numColumns="4"
        android:horizontalSpacing="1dp"
        android:verticalSpacing="1dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:backgroundTint="@color/transdarkblue"
            android:background="@drawable/rounded_layout"
            android:gravity="center_vertical" />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/living_room"
            android:layout_marginTop="-35dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


    <GridView
        android:id="@+id/chore_grid_living"
        android:numColumns="auto_fit"
        android:horizontalSpacing="2dp"
        android:verticalSpacing="2dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:backgroundTint="@color/transdarkblue"
            android:background="@drawable/rounded_layout"
            android:gravity="center_vertical" />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/half_bath"
            android:layout_marginTop="-35dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


    <GridView
        android:id="@+id/chore_grid_half_bath"
        android:numColumns="auto_fit"
        android:horizontalSpacing="2dp"
        android:verticalSpacing="2dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:backgroundTint="@color/transdarkblue"
            android:background="@drawable/rounded_layout"
            android:gravity="center_vertical" />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/full_bath"
            android:layout_marginTop="-35dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <GridView
        android:id="@+id/chore_grid_full_bath"
        android:numColumns="auto_fit"
        android:horizontalSpacing="2dp"
        android:verticalSpacing="2dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:backgroundTint="@color/transdarkblue"
            android:background="@drawable/rounded_layout"
            android:gravity="center_vertical" />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/bedroom"
            android:layout_marginTop="-35dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <GridView
        android:id="@+id/chore_grid_bedroom"
        android:numColumns="auto_fit"
        android:horizontalSpacing="2dp"
        android:verticalSpacing="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>